--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      - name: Run command
+        run: pwd
+
+      - name: Run list
+        run: ls -latr
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
