--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Run list
         run: ls -latr
 
+      - name: Run uname
+        run: uname -a
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
